changed the font of info class

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 
 nav{
     background-color: rgb(37, 9 ,37);
@@ -50,6 +50,7 @@ nav ul{
 
 .info {
     font-size: 22px;
+    font-family: 'Oswald', sans-serif;
 }
 
 .gameInfo{
